		- AI can now use dumbfired missiles (Targeting Mode = None / Radar/Laser missile without the necessary sensor), if no better option available.
		- Add new 'radarTimeout' field to missile configs to permit dumbfired inertial guidance LOAL radar missiles.
		- AI can now attampt to use guided bombs against air targets if engage Air = true and nothing else available.
- Competition:
	- Pinata mode now temporarily disables Camera AutoSwitch, switches camera to Pinata until it is destroyed.
	- Update the tournament parser to compute non-negative scores per round for waypoint races.
  
v1.6.0.2
IMPROVEMENTS / FIXES
- UI:
	- Add a toggle for aim assist mode (Target = reticle placed at the closest point of approach of the projectile to the target, Aimer = reticle placed at the aiming position).
	- Add localisation for 'Multiple' ammo type.
- Missiles:
	- Fix missiles being able to fire.

v1.6.0.1
IMPROVEMENTS / FIXES
- General:
	- Restore compatibility with KSP 1.9.1.
	- Cleaned up some lingering issues with repulsor functionality when used outside of the 'Enable Repulsors' gamemode.
- UI:
	- Expand 'Edit Inputs' scrollview enough to show all the shortcuts.
- AI:
	- Don't turn on peace mode when auto-tuning.
- Gamemodes:
	- Add BD_PART_STRENGTH BattleDamage option to have part/joint strength weaken as parts take damage.
- Weapons:
	- Fix clustermissiles being non-functional.

v1.6.0.0
IMPROVEMENTS / FIXES
- General:
	- Add restore/wipe functionality to the controlled axes of the KAL.
		- Toggling the "Restore KAL" toggle in the GamePlay section of the settings will restore or wipe the controlled axes from KALs on all loaded vessels.
		- Vessels spawned via BDA+'s spawning routines will automatically have this applied.
		- The KALs on all loaded vessels will also be restored/wiped on competition start.
	- Update the defaults for a number of BDA+ settings.
- UI:
	- Auto-switch UI focus to new input text fields in Vessel Mover and Custom Spawn Templates.